# ReadActor

./: .gitignore  LICENSE  README.md  log.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
CSV/: Person.csv  Person_2.csv  Person_updated.csv  Person_updated_V2.csv  df_person_Github_fake.csv
Python scripts/: authenticity_institution.py  authenticity_person.py  authenticity_space.py  final_no_match.json  final_person_match_dict.json  matched_by_wikipedia.json  person_matched_by_wikipedia.json
Python scripts/data/: Person.csv  Person_updated.csv
Python scripts/results/: match_after_choosing_longest_match.json  matched_by_wikipedia.json
Python scripts/scripts/: authenticity_institution.py  authenticity_person.py  authenticity_space.py  auto_fill_with_wiki.py  command_line_tool.py  create_sample_person_csv_for_demo.py  extractWikidataProperties.py  validate_CSV_columns.py
Python scripts/utility/: differences_to_be_checked
audio/: readme.md
image/: readme.md
scripts/: authenticity_institution.py  authenticity_person.py  authenticity_space.py  command_line_tool.py  create_sample_person_csv_for_demo.py  queryLuXun.py  test_CLT.py
src/: log.txt
src/CSV/: Agent.csv  Institution.csv  Person.csv  Person_updated.csv  Person_updated_V2.csv  Space.csv  df_person_Github.csv
src/results/: match_after_choosing_longest_match.json  match_for_space.json  (+5 more)
tests/: ag_for_test.csv  pe_for_test.csv  pl_for_test.csv  testSpace.py  test_CLT.py  test_Institution.py  test_Person.py  test_Space.py  test_click.py
(+16 files in other folders)
