[metadata]
name = ReadChinaLookup-QinGu
version = 1.0.1-alpha
author = Qin Gu
author_email = guqin7@gmail.com
description = A lookup tool for ReadChina project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/readchina/WikidataLookup
project_urls =
    Bug Tracker = https://github.com/pypa/ReadChinaLookup/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
